# dir2src

./: CMakeLists.txt
src/: main.cpp
